--- a/css/styles.css
+++ b/css/styles.css
@@ -394,3 +394,161 @@ a{
         padding-top: 30px;
     }
 }
+
+
+
+
+
+@media screen and (max-width: 601px) {
+
+    .header{
+        width: 100%;
+        height: 650px;
+        overflow: hidden;
+    }
+
+    .imgheader{
+        width: 350px;
+        left: 90px;
+        top: 150px;
+    }
+
+    .txt1{
+        font-size: 130px;
+        left: 70px;
+
+    }
+    
+    .txt2{
+        font-size: 130px;
+        right: 90px;
+        top: 250px;
+
+    }
+    
+    .txt3{
+        font-size: 130px;
+        top: 200px;
+        left: 95px;
+    }
+    
+    .h5 {
+        display: none;
+     }
+
+     .section1{
+        font-size: 20px;
+        width: 100%;
+        height: auto;
+        position: inherit;
+     }
+    
+
+
+
+
+
+
+    .info-section2{
+        top: 1020px;
+    }
+    
+    .titulo{
+        font-size: 55px;
+    }
+    
+    .parrafo-sect2{
+        font-size: 15px;
+        width: 190px;
+    }
+    
+    .img-sect2{
+        width: 320px;
+        left: 35%;
+        top: 1000px;
+    }
+    
+    
+    .color-selector{
+        flex-direction: column;
+        width: 130%;
+        border-bottom: 1px solid black;
+    }
+
+    
+    .selectores{
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
+
+
+
+
+
+    
+    .info-section3{
+        position: absolute;
+        top: 1500px;
+        left: 50px;
+        z-index: 5;
+    }
+    
+    .parrafo-sect3{
+        font-size: 15px;
+        width: 190px;
+    
+    }
+    
+    .img-sect3{
+        width: 200px;
+        left: 40%;
+        top: 1450px;
+    }
+    
+
+
+
+
+
+    .footer{
+        background-color: black;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 10px;
+        grid-auto-rows: minmax(100px, auto);
+    
+    }
+    
+    .box1{
+        font-size: 20px;
+        line-height: 0.8;
+        grid-column:  1;
+        grid-row: 1;
+    
+    }
+    
+    .box2{
+        font-size: 25px;
+        font-weight: bold;
+        line-height: 0.8;
+        grid-column:  1;
+        grid-row: 3;
+        padding-top: 80px;
+    }
+    
+    .box3{
+        padding-top: 50px;
+        grid-column:  1;
+        grid-row: 2;
+    }
+    
+    
+    .input{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .terminos{
+        padding-top: 30px;
+    }
+}
